# perception

./: .editorconfig  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json
.claude/rules/: rust.md  rust_tests.md
.config/: nextest.toml
lenses_cli/: Cargo.toml
lenses_cli/src/: cmd.rs  main.rs
lenses_cli/src/cmd/: hello.rs
lenses_cli/tests/: errors_without_a_subcommand.rs  main.rs  prints_hello_world.rs
perception/: Cargo.toml  README.md
perception/src/: compare_paths.rs  comparison.rs  decoded_image.rs  diff_output_paths.rs  diff_paths.rs  dissimilarity_threshold.rs  engine.rs  image_pair.rs  lib.rs  similarity_error.rs  similarity_map.rs  three_way_diff.rs
perception_backend/: Cargo.toml
perception_backend/src/: lib.rs  map_plane.rs  scale_dimensions.rs  scale_score.rs  ssim_error.rs
perception_backend_cpu/: Cargo.toml
perception_backend_cpu/src/: cpu_backend.rs  cpu_prepared.rs  downsample.rs  lib.rs  linear_gray_image.rs  linear_rgb_image.rs  map_indices.rs  parallel_pixel_threshold.rs  plane.rs  prepared_scale.rs  reduce_deviation.rs  scale_comparison.rs
perception_backend_cuda/: Cargo.toml
perception_backend_cuda/src/: allocate_planes.rs  create_context.rs  cuda_backend.rs  cuda_error.rs  device_capability.rs  download_plane.rs  elementwise_product.rs  gaussian_blur.rs  lab_conversion.rs  lib.rs  load_kernel.rs  plane_reduction.rs  srgb_linearization.rs  triangle_downsample.rs  upload_plane.rs
perception_backend_cuda_test/: Cargo.toml
perception_backend_cuda_test/src/: lib.rs  measure_cross_backend_difference.rs
perception_backend_cuda_test/tests/: equivalence.rs
perception_bench_cpu/: Cargo.toml
perception_bench_cpu/benches/: compare.rs  create_image.rs  pipeline.rs
perception_bench_cuda/: Cargo.toml
perception_bench_cuda/benches/: compare.rs  create_image.rs  pipeline.rs
perception_cli/: Cargo.toml
perception_cli/src/: cli.rs  cmd.rs  dispatch.rs  lib.rs  main.rs  run.rs
perception_cli/src/cmd/: backend.rs  dissimilarity.rs  three_way_diff.rs
perception_cli/tests/: main.rs  parses_cli_arguments.rs  runs_subcommands.rs
perception_metric/: Cargo.toml
perception_metric/fixtures/: NOTICE
perception_metric/src/: comparison_result.rs  lib.rs  similarity.rs  ssim.rs  ssim_image.rs  weights.rs
perception_metric/tests/: similarity_ranks_blur_severity.rs
perception_metric_bench/: Cargo.toml
perception_metric_bench/src/: format_row.rs  from_coordinate_hash.rs  measurement.rs
perception_metric_bench_scenarios/: Cargo.toml
perception_metric_bench_scenarios/src/: compare.rs  create_image.rs  create_image_function.rs  pipeline.rs
perception_metric_test/: Cargo.toml
perception_metric_test/src/: average_ranks.rs  lib.rs  pearson.rs  spearman.rs
perception_test/: Cargo.toml
perception_test/src/: scratch.rs  write_test_image.rs
ssim/: Cargo.toml
ssim/src/: compare_paths.rs  comparison.rs  decoded_image.rs  engine.rs  image_pair.rs  similarity_error.rs  similarity_map.rs
ssim_backend/: Cargo.toml
ssim_backend/src/: backend.rs  scale_score_with_map.rs
ssim_backend_cpu/: Cargo.toml
ssim_backend_cpu/src/: cpu_backend.rs  gaussian_blur.rs  linear_pyramid_level.rs  linear_rgba_image.rs  linear_to_lab_color.rs  linear_to_lab_gray.rs  map_indices_three.rs  plane_error.rs  prepared_channel.rs
ssim_backend_cuda/: Cargo.toml
ssim_backend_cuda/src/: allocate_plane.rs  compile_ptx.rs  cuda_backend.rs  cuda_prepared.rs  cuda_prepared_channel.rs  cuda_scale.rs  kernel_source.rs  load_module.rs  select_virtual_arch.rs  ssim_map.rs  virtual_arch.rs
ssim_backend_cuda_test/: Cargo.toml
ssim_backend_cuda_test/src/: cross_backend_difference.rs  max_abs_difference.rs  measure_cross_backend_difference.rs
ssim_backend_cuda_test/tests/: equivalence.rs
ssim_bench_cpu/: Cargo.toml
ssim_bench_cpu/benches/: compare.rs  create_image.rs  pipeline.rs
ssim_bench_cuda/: Cargo.toml
ssim_bench_cuda/benches/: compare.rs  create_image.rs  pipeline.rs
ssim_metric/: Cargo.toml
ssim_metric/src/: lib.rs  ssim.rs  ssim_image.rs  ssim_map.rs
ssim_metric/tests/: similarity_ranks_blur_severity.rs
ssim_metric_bench/: Cargo.toml
ssim_metric_bench/src/: benchmark_sizes.rs  format_header.rs  lib.rs  measure.rs  synthetic_pixels.rs
ssim_metric_bench_scenarios/: Cargo.toml
ssim_metric_bench_scenarios/src/: compare.rs  create_image.rs  create_image_function.rs  lib.rs  pipeline.rs
ssim_metric_test/: Cargo.toml
ssim_metric_test/src/: kendall_tau_b.rs
ssim_test/: Cargo.toml
ssim_test/src/: lib.rs  scratch.rs
