[workspace]
resolver = "3"
members = [
    "ssim",
    "ssim_backend",
    "ssim_backend_cpu",
    "ssim_backend_cuda",
    "ssim_backend_cuda_test",
    "ssim_bench_cpu",
    "ssim_bench_cuda",
    "ssim_metric",
    "ssim_metric_bench",
    "ssim_metric_bench_scenarios",
    "ssim_metric_test",
    "ssim_test",
]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
cudarc = { version = "=0.19.8", default-features = false }
image = { version = "=0.25.10", default-features = false, features = ["bmp", "png", "jpeg", "webp"] }
imgref = "=1.12.2"
libblur = "=0.24.0"
ndarray = "=0.17.2"
ndarray-stats = "=0.7.0"
palette = { version = "=0.7.6", default-features = false, features = ["std"] }
rayon = "=1.12.0"
rgb = "=0.8.53"
ssim_backend = { path = "ssim_backend", version = "=0.1.0" }
ssim_backend_cpu = { path = "ssim_backend_cpu", version = "=0.1.0" }
ssim_backend_cuda = { path = "ssim_backend_cuda", version = "=0.1.0" }
ssim_metric = { path = "ssim_metric", version = "=0.1.0" }
ssim_metric_bench = { path = "ssim_metric_bench", version = "=0.1.0" }
ssim_metric_bench_scenarios = { path = "ssim_metric_bench_scenarios", version = "=0.1.0" }
ssim_metric_test = { path = "ssim_metric_test", version = "=0.1.0" }
ssim_test = { path = "ssim_test", version = "=0.1.0" }
thiserror = "=2.0.18"

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.lints.clippy]
ignored_unit_patterns = "warn"
must_use_candidate = "warn"
