[workspace]
resolver = "3"
members = [
    "perception",
    "perception_backend",
    "perception_backend_cpu",
    "perception_backend_cuda",
    "perception_backend_cuda_test",
    "perception_bench_cpu",
    "perception_bench_cuda",
    "perception_metric",
    "perception_metric_bench",
    "perception_metric_bench_scenarios",
    "perception_metric_test",
    "perception_test",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["Mateusz Charytoniuk <mateusz@intentee.com>"]
repository = "https://github.com/intentee/perception"
homepage = "https://github.com/intentee/perception"

[workspace.dependencies]
cudarc = { version = "=0.19.8", default-features = false }
image = { version = "=0.25.10", default-features = false, features = ["bmp", "png", "jpeg", "webp"] }
imgref = "=1.12.2"
libblur = "=0.24.0"
ndarray = "=0.17.2"
ndarray-stats = "=0.7.0"
palette = { version = "=0.7.6", default-features = false, features = ["std"] }
rayon = "=1.12.0"
rgb = "=0.8.53"
perception_backend = { path = "perception_backend", version = "=0.1.0" }
perception_backend_cpu = { path = "perception_backend_cpu", version = "=0.1.0" }
perception_backend_cuda = { path = "perception_backend_cuda", version = "=0.1.0" }
perception_metric = { path = "perception_metric", version = "=0.1.0" }
perception_metric_bench = { path = "perception_metric_bench" }
perception_metric_bench_scenarios = { path = "perception_metric_bench_scenarios" }
perception_metric_test = { path = "perception_metric_test" }
perception_test = { path = "perception_test" }
thiserror = "=2.0.18"

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.lints.clippy]
ignored_unit_patterns = "warn"
must_use_candidate = "warn"
