[package]
name = "perception"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Perceptual image similarity via a multi-scale SSIM metric (CPU and CUDA backends)."
readme = "README.md"
keywords = ["ssim", "image", "similarity", "dssim", "perceptual"]
categories = ["multimedia::images", "computer-vision"]

[dependencies]
image = { workspace = true }
perception_backend = { workspace = true }
perception_backend_cpu = { workspace = true, optional = true }
perception_backend_cuda = { workspace = true, optional = true }
perception_metric = { workspace = true }
rayon = { workspace = true }
rgb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
perception_test = { workspace = true }

[features]
default = ["cpu"]
cpu = ["dep:perception_backend_cpu", "perception_metric/cpu"]
cuda = ["dep:perception_backend_cuda", "perception_backend_cuda/cuda"]

[lints]
workspace = true
