[package]
name = "perception_backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Backend abstraction (trait and shared types) for the perception SSIM engine."

[dependencies]
palette = { workspace = true }
rgb = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
