[package]
name = "perception_bench_cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "perception CUDA benchmarks"
publish = false

[dependencies]
perception_backend_cuda = { workspace = true, optional = true }
perception_metric = { workspace = true }
perception_metric_bench = { workspace = true }
perception_metric_bench_scenarios = { workspace = true }

[features]
cuda = ["dep:perception_backend_cuda", "perception_backend_cuda/cuda"]

[[bench]]
name = "create_image"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
