[package]
name = "perception_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "See how two images differ: render a red-highlighted three-way diff or a dissimilarity heatmap."

autotests = false

[[bin]]
name = "perception"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
perception = { workspace = true }

[dev-dependencies]
image = { workspace = true }
perception_test = { workspace = true }

[features]
default = ["cpu"]
cpu = ["perception/cpu"]
cuda = ["perception/cuda"]

[lints]
workspace = true

[[test]]
name = "integration"
path = "tests/main.rs"
