[package]
name = "perception_metric"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Backend-agnostic multi-scale SSIM metric engine used by the perception crate."

[dependencies]
imgref = { workspace = true }
palette = { workspace = true }
perception_backend = { workspace = true }
perception_backend_cpu = { workspace = true, optional = true }
rgb = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
image = { workspace = true }
perception_metric_test = { workspace = true }

[features]
default = ["cpu"]
cpu = ["dep:perception_backend_cpu"]

[lints]
workspace = true
