[package]
name = "ssim"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "ssim"

[dependencies]
image = { workspace = true }
rayon = { workspace = true }
rgb = { workspace = true }
ssim_backend = { workspace = true }
ssim_backend_cpu = { workspace = true, optional = true }
ssim_backend_cuda = { workspace = true, optional = true }
ssim_metric = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ssim_test = { workspace = true }

[features]
default = ["cpu"]
cpu = ["dep:ssim_backend_cpu", "ssim_metric/cpu"]
cuda = ["dep:ssim_backend_cuda", "ssim_backend_cuda/cuda"]

[lints]
workspace = true
