[package]
name = "ssim_backend_cpu"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "ssim cpu backend"

[dependencies]
image = { workspace = true }
libblur = { workspace = true }
palette = { workspace = true }
rayon = { workspace = true }
rgb = { workspace = true }
ssim_backend = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
