[package]
name = "ssim_backend_cuda"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "ssim cuda backend"

[dependencies]
cudarc = { workspace = true, optional = true }
libblur = { workspace = true }
palette = { workspace = true }
rgb = { workspace = true }
ssim_backend = { workspace = true }
thiserror = { workspace = true }

[features]
cuda = [
    "dep:cudarc",
    "cudarc/driver",
    "cudarc/nvrtc",
    "cudarc/std",
    "cudarc/dynamic-loading",
    "cudarc/cuda-13020",
]

[lints]
workspace = true
