[package]
name = "ssim_backend_cuda_test"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "ssim cuda backend equivalence tests"

[dependencies]
rgb = { workspace = true }
ssim_backend = { workspace = true }
ssim_backend_cpu = { workspace = true }
ssim_backend_cuda = { workspace = true }
ssim_metric_bench = { workspace = true }

[features]
cuda = ["ssim_backend_cuda/cuda"]

[lints]
workspace = true
