[package]
name = "ssim_bench_cpu"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "ssim cpu benchmarks"

[dependencies]
ssim_metric = { workspace = true }
ssim_metric_bench = { workspace = true }
ssim_metric_bench_scenarios = { workspace = true }

[features]
cpu = ["ssim_metric/cpu"]

[[bench]]
name = "create_image"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
