[package]
name = "ssim_bench_cuda"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "ssim cuda benchmarks"

[dependencies]
ssim_backend_cuda = { workspace = true, optional = true }
ssim_metric = { workspace = true }
ssim_metric_bench = { workspace = true }
ssim_metric_bench_scenarios = { workspace = true }

[features]
cuda = ["dep:ssim_backend_cuda", "ssim_backend_cuda/cuda"]

[[bench]]
name = "create_image"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
