[package]
name = "ssim_metric_bench_scenarios"
version = "0.1.0"
edition = "2024"
license.workspace = true
description = "ssim metric benchmark scenarios"

[dependencies]
rgb = { workspace = true }
ssim_backend = { workspace = true }
ssim_metric = { workspace = true }
ssim_metric_bench = { workspace = true }

[lints]
workspace = true
